--- a/tff/convert/watm.html
+++ b/tff/convert/watm.html
@@ -529,7 +529,7 @@ settings will prevent some TF information from reaching the WATM.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1-L3227" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1-L3230" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;Export to Web Annotation Text Model
 
@@ -1289,7 +1289,7 @@ def operationalize(data):
 
         -   `px`: compute absolute pixel values out of percentage values.
             It takes 2 arguments: file name and region specifier.
-            The region specifier has the form `pct:x,y,w,h`. If not
+            The region specifier has the form `pct:x,y,w,h` or `x,y,w,h`. If not
             the result is equal to `full`.
             The file name is the file name of the image, by which the absolute size can
             be retrieved.
@@ -1445,7 +1445,7 @@ def funcPx(F, L, sizeInfo, facsMissing, feat, otype, node, facsFile, region, war
     if (&#34;pages&#34;, facsFile) in facsMissing:
         return &#34;full&#34;
 
-    if region in {&#34;full&#34;, &#34;square&#34;}:
+    if region in {&#34;square&#34;}:
         return region
 
     absSize = sizeInfo.get(facsFile, None)
@@ -1459,6 +1459,9 @@ def funcPx(F, L, sizeInfo, facsMissing, feat, otype, node, facsFile, region, war
         return &#34;full&#34;
 
     absW, absH = absSize
+
+    if region == &#34;full&#34;:
+        region = &#34;pct:0,0,100,100&#34;
 
     if region.startswith(&#34;pct:&#34;):
         isPct = True
@@ -3775,7 +3778,7 @@ class WATMS:
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L906-L968" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L906-L971" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def funcPx(F, L, sizeInfo, facsMissing, feat, otype, node, facsFile, region, warnings):
     file = F.file.v(L.u(node, otype=&#34;file&#34;)[0])
@@ -3786,7 +3789,7 @@ class WATMS:
     if (&#34;pages&#34;, facsFile) in facsMissing:
         return &#34;full&#34;
 
-    if region in {&#34;full&#34;, &#34;square&#34;}:
+    if region in {&#34;square&#34;}:
         return region
 
     absSize = sizeInfo.get(facsFile, None)
@@ -3800,6 +3803,9 @@ class WATMS:
         return &#34;full&#34;
 
     absW, absH = absSize
+
+    if region == &#34;full&#34;:
+        region = &#34;pct:0,0,100,100&#34;
 
     if region.startswith(&#34;pct:&#34;):
         isPct = True
@@ -3890,7 +3896,7 @@ the development WATM resides under <code>dev</code>.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L611-L723" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L611-L723" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getResultDir(baseDir, headPart, version, prod, silent, withSuffix=True):
     &#34;&#34;&#34;Determines the directory for the resulting WATM.
@@ -4039,7 +4045,7 @@ Variables are looked up when going through the (Text-Fabric) data, node by node.
 <ul>
 <li><code>px</code>: compute absolute pixel values out of percentage values.
 It takes 2 arguments: file name and region specifier.
-The region specifier has the form <code>pct:x,y,w,h</code>. If not
+The region specifier has the form <code>pct:x,y,w,h</code> or <code>x,y,w,h</code>. If not
 the result is equal to <code>full</code>.
 The file name is the file name of the image, by which the absolute size can
 be retrieved.
@@ -4086,7 +4092,7 @@ specified node type, None is returned.</li>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L726-L891" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L726-L891" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def operationalize(data):
     &#34;&#34;&#34;Translates the scans part of iiif.yml file into annotation instructions.
@@ -4121,7 +4127,7 @@ specified node type, None is returned.</li>
 
         -   `px`: compute absolute pixel values out of percentage values.
             It takes 2 arguments: file name and region specifier.
-            The region specifier has the form `pct:x,y,w,h`. If not
+            The region specifier has the form `pct:x,y,w,h` or `x,y,w,h`. If not
             the result is equal to `full`.
             The file name is the file name of the image, by which the absolute size can
             be retrieved.
@@ -4274,7 +4280,7 @@ specified node type, None is returned.</li>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L597-L608" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L597-L608" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def rep(status):
     &#34;&#34;&#34;Represent a boolean status for a message to the console.
@@ -4298,7 +4304,7 @@ specified node type, None is returned.</li>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L894-L903" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L894-L903" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def showWarnings(label, warnings):
     if len(warnings):
@@ -4375,7 +4381,7 @@ versions in the <code>watm</code> directory.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L971-L3074" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L974-L3077" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class WATM:
     &#34;&#34;&#34;The export machinery is exposed as a class, wrapped around a TF dataset.&#34;&#34;&#34;
@@ -6505,7 +6511,7 @@ versions in the <code>watm</code> directory.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2061-L2084" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2064-L2087" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">@staticmethod
 def numEqual(nTF, nWA, silent):
@@ -6554,7 +6560,7 @@ def numEqual(nTF, nWA, silent):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2086-L2137" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2089-L2140" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">@staticmethod
 def strEqual(tf, wa, silent):
@@ -6623,7 +6629,7 @@ def strEqual(tf, wa, silent):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1317-L1327" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1320-L1330" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def console(self, msg, **kwargs):
     &#34;&#34;&#34;Print something to the output.
@@ -6646,7 +6652,7 @@ def strEqual(tf, wa, silent):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1279-L1315" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1282-L1318" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getExcluded(self):
     silent = self.silent
@@ -6695,7 +6701,7 @@ def strEqual(tf, wa, silent):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1805-L1839" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1808-L1842" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getLogicalPairs(self, waFromTF):
     hyphenation = self.hyphenation
@@ -6749,7 +6755,7 @@ exclusions.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1432-L1803" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1435-L1806" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def makeAnno(self):
     &#34;&#34;&#34;Make all annotations.
@@ -7136,7 +7142,7 @@ to indices in this list is stored in member <code>waFromTF</code>.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1329-L1404" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1332-L1407" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def makeText(self):
     &#34;&#34;&#34;Creates the text data.
@@ -7238,7 +7244,7 @@ or <code>tuple</code> of <code>strings</code></dt>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1406-L1430" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1409-L1433" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def mkAnno(self, kind, ns, body, target, inherited=False):
     &#34;&#34;&#34;Make a single annotation and return its id.
@@ -7291,7 +7297,7 @@ If <code>condensed</code> is True, we suppress this output.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2139-L2198" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2142-L2201" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def testAll(self, condensed=False):
     &#34;&#34;&#34;Test all aspects of the WATM conversion.
@@ -7378,7 +7384,7 @@ These annotations do not have namespace <code>TEI</code>.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2592-L2803" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2595-L2806" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def testAttributes(self):
     &#34;&#34;&#34;Test the attributes.
@@ -7612,7 +7618,7 @@ by annotations.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2888-L3074" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2891-L3077" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def testEdges(self):
     &#34;&#34;&#34;Test the edges.
@@ -7819,7 +7825,7 @@ dataset.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2423-L2590" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2426-L2593" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def testElements(self):
     &#34;&#34;&#34;Test the elements.
@@ -8008,7 +8014,7 @@ the kind <code>anno</code>.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2805-L2886" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2808-L2889" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def testExtra(self):
     &#34;&#34;&#34;Test the extra data for on-the-fly annotations.
@@ -8106,7 +8112,7 @@ We unpack targets if they contain structured information.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2200-L2383" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2203-L2386" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def testSetup(self):
     &#34;&#34;&#34;Prepare the tests.
@@ -8309,7 +8315,7 @@ whether the TF and WATM datasets agree on it.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L2385-L2421" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L2388-L2424" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def testText(self):
     &#34;&#34;&#34;Test the text.
@@ -8371,7 +8377,7 @@ have the same result base.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L1841-L2059" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L1844-L2062" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def writeAll(self, resultVersion=None):
     &#34;&#34;&#34;Write text and annotation data to disk.
@@ -8632,7 +8638,7 @@ See <code><a title="tff.convert.watm.WATM" href="#tff.convert.watm.WATM">WATM</a
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L3077-L3227" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L3080-L3230" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class WATMS:
     &#34;&#34;&#34;Export corpora that are divided over multiple TF datasets.
@@ -8798,7 +8804,7 @@ See <code><a title="tff.convert.watm.WATM" href="#tff.convert.watm.WATM">WATM</a
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L3154-L3164" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L3157-L3167" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def console(self, msg, **kwargs):
     &#34;&#34;&#34;Print something to the output.
@@ -8830,7 +8836,7 @@ Otherwise all datasets will be converted.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/watm.py#L3166-L3227" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/de345064bfe3d72b340e798b250c9e411afaca3b/tff/convert/watm.py#L3169-L3230" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def produce(self, doc=None, prod=&#34;dev&#34;):
     &#34;&#34;&#34;Convert all relevant TF datasets.
